Make sure the dark mode switcher have a pointer cursor (#3289)

--- a/custom/templates/DefaultRevamp/css/custom.css
+++ b/custom/templates/DefaultRevamp/css/custom.css
@@ -1006,6 +1006,7 @@ select {
     padding: 5px;
     height: 26px;
     width: 50px;
+    cursor: pointer;
 }
 
 .darkmode-ball {
